--- a/evaluation/evaluation_27_03_24.org
+++ b/evaluation/evaluation_27_03_24.org
@@ -7,6 +7,7 @@ TODO:
 - Coq Rust extraction + wasm-pack
 
 *** Start up
+
 |----------------------------------------------------------------+-------+-------+----------+---------+---------+-------+-------+----------|
 |                                                                | demo1 | demo2 | list_sum | vs_easy | vs_hard | binom | color | sha_fast |
 |----------------------------------------------------------------+-------+-------+----------+---------+---------+-------+-------+----------|
@@ -25,6 +26,7 @@ TODO:
 | non CPS, grow_mem in separate function (mrch-24-24)            |  2.79 |  2.72 |     2.77 |    4.37 |    4.31 |  3.11 |  6.69 |     3.61 |
 |----------------------------------------------------------------+-------+-------+----------+---------+---------+-------+-------+----------|
 
+All numbers in milliseconds.
 
 *** Run time
 
@@ -46,14 +48,17 @@ TODO:
 | non CPS, grow_mem in separate function (mrch-24-24)            |  1.78 |  0.33 |     0.42 |   21.21 |   91.49 | 15.42 | 169.38 |   110.58 |
 |----------------------------------------------------------------+-------+-------+----------+---------+---------+-------+--------+----------|
 
-*** TODO Memory usage
+All numbers in milliseconds.
 
-*** TODO Binary size
+*** Memory usage
+TODO
+
+*** Binary size
+TODO
 
 ** Wasm binaries (wasm-opt -O2)
 
 *** Start up
-
 
 |----------------------------------------------------------------+-------+-------+----------+---------+---------+-------+-------+----------|
 |                                                                | demo1 | demo2 | list_sum | vs_easy | vs_hard | binom | color | sha_fast |
@@ -73,6 +78,7 @@ TODO:
 | non CPS, grow_mem in separate function (mrch-24-24)            |  3.06 |  2.72 |     3.46 |    5.50 |    4.91 |  3.46 | 7.22  |     3.62 |
 |----------------------------------------------------------------+-------+-------+----------+---------+---------+-------+-------+----------|
 
+All numbers in milliseconds.
 
 *** Run time
 
@@ -94,10 +100,14 @@ TODO:
 | non CPS, grow_mem in separate function (mrch-24-24)            |  2.05 |  0.32 |     0.53 |   24.95 |   88.26 | 14.97 | 160.58 |   100.80 |
 |----------------------------------------------------------------+-------+-------+----------+---------+---------+-------+--------+----------|
 
-*** TODO Memory usage
+All numbers in milliseconds.
 
-*** TODO Binary size
+*** Memory usage
 
+TODO
+
+***  Binary size
+TODO
 
 ** Native (x86)
 
@@ -123,6 +133,8 @@ TODO:
 | Coq-Malfunction (verified -O2) | 0.000003 | 0.000001 | 0.000010 |    1.19 |   17.48 |  2.57 |  8.63 |    13.13 |
 |--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
 
+All numbers in milliseconds.
+
 TODO: Consider adding rust extraction compiled to x86 
 
 *** TODO Binary size
@@ -134,3 +146,5 @@ TODO: Consider adding rust extraction compiled to x86
 |--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
 | CertiCoq C (clang -O2)         |       44 |       28 |       27 |     226 |     219 |   133 |   564 |      234 |
 |--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+
+All numbers in kilobytes.
