remove org footnotes

--- a/evaluation/evaluation_martin.org
+++ b/evaluation/evaluation_martin.org
@@ -803,25 +803,25 @@ same as (mrch-22-24), grow mem in separate function (mrch-24-24) & 45 & 6 & 6 & 
 
 All numbers in milliseconds.
 
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-|                                |    demo1 |    demo2 | list_sum | vs_easy | vs_hard | binom |     color | sha_fast |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| CertiCoq C (clang)             |    0.050 |    0.017 |     0.14 |    8.59 |  159.09 | 13.62 |     29.65 |    106.2 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| CertiCoq C (clang -O2)         |    0.038 |    0.012 |    0.077 |    2.64 |   21.61 |  2.75 |     12.33 |    17.10 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| OcaML Extract (ocamlopt)       |    0.003 |    0.002 |     0.01 |    1.01 |    9.68 |  2.57 | N/A[fn:2] |    12.32 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| OcaML Extract (ocamlopt -O2)   |    0.003 |    0.002 |     0.01 |    0.92 |    9.91 |  2.57 | N/A[fn:2] |    12.28 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| Coq-Malfunction (mlf)          |    0.005 |    0.002 |     0.02 |    3.13 |   32.72 |  3.19 |     17.61 |     18.5 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| Coq-Malfunction (mlf -O2)      | 0.000003 | 0.000001 | 0.000010 |    1.20 |   17.56 |  2.55 |      8.56 |    13.13 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| Coq-Malfunction (verified)     |    0.003 |    0.002 |     0.02 |    3.12 |   33.40 |  3.19 |     17.34 |    18.68 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
-| Coq-Malfunction (verified -O2) | 0.000003 | 0.000001 | 0.000010 |    1.19 |   17.48 |  2.57 |      8.63 |    13.13 |
-|--------------------------------+----------+----------+----------+---------+---------+-------+-----------+----------|
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+|                                |    demo1 |    demo2 | list_sum | vs_easy | vs_hard | binom | color | sha_fast |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| CertiCoq C (clang)             |    0.050 |    0.017 |     0.14 |    8.59 |  159.09 | 13.62 | 29.65 |    106.2 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| CertiCoq C (clang -O2)         |    0.038 |    0.012 |    0.077 |    2.64 |   21.61 |  2.75 | 12.33 |    17.10 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| OcaML Extract (ocamlopt)       |    0.003 |    0.002 |     0.01 |    1.01 |    9.68 |  2.57 |   N/A |    12.32 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| OcaML Extract (ocamlopt -O2)   |    0.003 |    0.002 |     0.01 |    0.92 |    9.91 |  2.57 |   N/A |    12.28 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| Coq-Malfunction (mlf)          |    0.005 |    0.002 |     0.02 |    3.13 |   32.72 |  3.19 | 17.61 |     18.5 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| Coq-Malfunction (mlf -O2)      | 0.000003 | 0.000001 | 0.000010 |    1.20 |   17.56 |  2.55 |  8.56 |    13.13 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| Coq-Malfunction (verified)     |    0.003 |    0.002 |     0.02 |    3.12 |   33.40 |  3.19 | 17.34 |    18.68 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
+| Coq-Malfunction (verified -O2) | 0.000003 | 0.000001 | 0.000010 |    1.19 |   17.48 |  2.57 |  8.63 |    13.13 |
+|--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
 
 TODO: Consider adding rust extraction compiled to x86 
 
@@ -836,8 +836,3 @@ TODO: Consider adding rust extraction compiled to x86
 |--------------------------------+----------+----------+----------+---------+---------+-------+-------+----------|
 
 All numbers in kilobytes.
-
-* Footnotes
-[fn:1] Running wasm-opt -O2 on the binary segfaults.
-
-[fn:2] The extracted OcaML code does not type-check. 
